# BCreator

./: C².bak  README.md  README.txt  just4explorer2017.sln  just4explorer2017.vcxproj
3rd/: README.md
Creator/: Gizmos.cpp  Main.cpp  README.md  main.cpp
Creator/GPanelAnimation/: CMakeLists.txt  GPanelAnimation.h
Creator/GPanelAssets/: GPanelAssets.cpp  GPanelAssets.h
Creator/Parts/: PartExplorer.cpp  PartMenu.cpp
Examples/: ExampleFramework.cpp  README.md  templab.cpp
Laboratory/: fbxlab.cpp  gl_lab.cpp  macroexpand_lab.cpp  main_lab.cpp  physxlab.cpp  templab.cpp  tempmain.cpp  voxel_lab.cpp
Laboratory/SimpleVox/: SimpleVox.cpp
Laboratory/Voxel/: VoxGame.cpp  VoxGame.h  VoxSettings.cpp  VoxSettings.h  VoxelLabMain.cpp
Project/: Creator.vcxproj  Creator.vcxproj.filters  C²engine2.Debug.Win32.props  C²engine2.Debug.x64.props  C²engine2.sln  Examples.vcxproj  Laboratory.vcxproj  Laboratory.vcxproj.filters  ReadC²engine2.sln  ReadC²engine2.vcxproj  ReadC²engine2.vcxproj.filters  Runtime.vcxproj  Runtime.vcxproj.filters  TestVoxelSpace.vcxproj  TestVoxelSpace.vcxproj.filters
Project/Laboratory/: Laboratory.vcxproj  Laboratory.vcxproj.filters  SimpleVox.vcxproj
Runtime/: C2engine.h  c2Activity.h  c2Application.h  c2Debugger.h  c2DefEvent.h  c2Event.h  c2Factory.h  c2Filestream.h  c2PreDefined.h
Runtime/Basics/: Matrix.h  MemQueue.cpp  MemQueue.h
Runtime/Metas/: Part.h  PreDefined.h  _Defined.h  _Factory.cpp  _defined.h
Runtime/Render/: Render.cpp  Render.h  Shader.h
Runtime/_c2Activity/: Event.cpp  Factory.cpp  Observer.cpp
Runtime/_c2Application/: Application.cpp  Event.cpp  EvtAct.cpp  Factory.cpp  glfwSetInputCallback.cpp  tsMemQueue.cpp  tsMemQueue.h
Tao/: Asset.h  Component.h  Node.h  Object.h
just4explorer2017/: just4explorer2017.vcxproj  just4explorer2017.vcxproj.filters
(+86 files in other folders)
